@ feat: KnowBrain 企业私有知识大脑 — 首个完整版本
核心功能：
- 文档上传/解析/分块（PDF/Word/TXT/Markdown）
- 混合检索引擎（Milvus 语义 + BM25 关键词 + RRF 融合）
- RAG 问答生成 + 溯源引用标注
- FAQ 精确匹配（高频问题短路返回）
- 查询预处理（LLM 改写 + 术语映射 + 敏感词过滤）
- 文档空间权限（Owner/Editor/Viewer + 部门可见范围）
- JWT 认证 + BCrypt 密码策略
- 管理后台（用户/部门/空间/场景/反馈/统计）
- 场景配置系统（IT 运维 + HR 制度种子数据）
- API 限流 + 健康检查 + PII 脱敏
- 单元测试覆盖（auth/permission/retrieval/scenario/security）
- Docker Compose 一键部署 + Nginx 网关

技术栈：Java 17 + Spring Boot 3.3 + Spring AI + Milvus 2.4 + MySQL 8.0 + Redis 7 + MinIO + Vue 3 + Element Plus

Co-Authored-By: Claude <noreply@anthropic.com>
@